initial setup with gems and configuration

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,9 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+/spec/cassettes
 
 .byebug_history
+
+# Ignore application configuration
+/config/application.yml
